Se crea el código necesario para la creacion de logs de estadisticas,  y el proceso automatico de lectura y carga de datos en los cubos de la bbdd